# WYGIWYH

./: .env.example  .gitignore  =0.58.2  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  translations.yml
app/: manage.py
app/WYGIWYH/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/WYGIWYH/logs/: ProcrastinateFilter.py
app/apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py
app/apps/api/: authentication.py  tests.py  urls.py
app/apps/calendar_view/: apps.py  tests.py  urls.py  views.py
app/apps/common/: admin.py  apps.py  forms.py  models.py  oauth_views.py  tasks.py  tests.py  urls.py  views.py
app/apps/currencies/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
app/apps/dca/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/apps/export_app/: apps.py  forms.py  tests.py  urls.py  views.py
app/apps/import/: apps.py
app/apps/import_app/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
app/apps/insights/: forms.py  tests.py  urls.py  views.py
app/apps/loan_tracker/: apps.py  models.py
app/apps/mini_tools/: apps.py  forms.py  tests.py  urls.py  views.py
app/apps/monthly_overview/: apps.py  tests.py  (+2 more)
app/fixtures/: demo_data.json
frontend/: .eslintrc  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: autosize.js  bootstrap.js  main.js  select.js  style.js
frontend/webpack/: webpack.common.js  webpack.config.prod.js
(+573 files in other folders)
