[project]
name = "wygiwyh"
dynamic = ["version"]
description = "An opinionated and powerful finance tracker."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5==2026.3",
    "django~=5.2.15",
    "django-allauth[socialaccount]~=65.18.0",
    "django-browser-reload==1.21.0",
    "django-cachalot~=2.9.0",
    "django-cotton~=2.7.2",
    "django-crispy-forms==2.6",
    "django-debug-toolbar==6.3.0",
    "django-filter==25.2",
    "django-hijack==3.7.8",
    "django-import-export~=4.4.1",
    "django-oauth-toolkit~=3.0.1",
    "django-pwa~=2.0.1",
    "django-vite==3.1.0",
    "djangorestframework~=3.17.1",
    "drf-spectacular~=0.29.0",
    "gunicorn==26.0.0",
    "mistune~=3.2.1",
    "openpyxl~=3.1.5",
    "procrastinate[django]~=3.8.1",
    "psycopg[binary,pool]==3.3.4",
    "pydantic~=2.13.4",
    "python-dateutil~=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml~=6.0.2",
    "requests~=2.34.2",
    "simpleeval~=1.0.3",
    "watchfiles==1.2.0",
    "whitenoise[brotli]==6.12.0",
    "xlrd~=2.0.1",
]

[tool.setuptools]
packages = ["app"]
